# LING_573_ND

./: .gitignore  D2.cmd  D3.cmd  D4.cmd  README.md  compose.yml  final.cmd  requirements.txt  scrape_log.txt
data/sarc/: sarc_urls.csv
data/scraped/: 2024-04-05T18:05:26.616845_reddit_scrape.tsv
logs/parsed/: base-model-training.logs  context-model-training.logs  train_roberta.logs  train_roberta_context.logs
logs/training/: train_roberta.logs  train_roberta_context.logs
outputs/: d2.out
outputs/D2/: d2.out
outputs/D3/: d3_baseline.out  d3_combined.out  d3_context.out  d3_roberta.out
outputs/D4/: d4_ensemble_sarc_d3_model.out
results/: D2_error_analysis.ipynb  D2_scores.out  D3_error_analysis.ipynb  D3_scores.out
results/D4/: D4_error_analysis.ipynb  Final_error_analysis.ipynb
src/: D2_run_evaluate.sh  D3_run_evaluate.sh  D4_evaluate_ft_model.sh  D4_run_evaluate.sh  fetch_data.py  final_run_evaluate.sh  run_evaluate.sh
src/ND_Partitions/: partition.py
src/dev_partition/: README.md  csv_to_json.py  csv_to_json.sh  get_data.py  get_data.sh  make_dev_set.sh  make_test_set.sh  partition_dev.py  partition_dev.sh
src/model/: concat_training.py  ensemble_model.py  error_analysis.py  evaluate.py  evaluate_base_model.py  evaluation.py  push_to_hub.py  sarc_model.ipynb  train_model.py  utils.py
src/reddit_data/: clean2.py  decompress.sh  filter_subreddits.fish  nd_subreddits_data.url  preprocess_data.py  preprocessing_flowchart.dot  reddit-dataset.torrent  (+2 more)
src/reddit_data/RedditDataCleaner/: Cargo.toml
src/reddit_data/RedditDataCleaner/src/: main.rs
(+33 files in other folders)
