[package]
name = "RedditDataCleaner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.117"
serde = { version = "1.0.202", features = ["derive"] }
rayon = "1.10.0"
regex = "1.10.4"
lazy_static = "1.4.0"
anyhow = "1.0.86"
zstd = "0.13.1"
#log = "0.4.21"
#pretty_env_logger = "0.5.0"

[profile.release]
codegen-units = 1
lto = "thin"
